--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Automatikoa
 OPTION_VALUE_SEC=Segundu
 OPTION_VALUE_SECS=Segundu
 
-OPTION_VALUE_PLAIN=Plain
-OPTION_VALUE_OLINE1=OLine1
-OPTION_VALUE_OLINE2=OLine2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=Arrunta
 OPTION_VALUE_ZOOM=Zoom-a
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=Abestu
 OPTION_VALUE_SELECT_PLAYERS=Aukeratu jokalariak
 OPTION_VALUE_OPEN_MENU=Menua zabaldu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Hardware kurtsorea
-OPTION_VALUE_SOFTWARE_CURSOR=Software kurtsorea
-
 SING_LOADING=Kargatzen...
 
 SING_CHOOSE_MODE=Aukeratu
@@ -86,9 +81,6 @@ SING_TOOLS=Tresnak
 
 SING_STATS=Estatistikak
 SING_STATS_DESC=Estatistikak ikusi
-
-SING_EDITOR=Editorea
-SING_EDITOR_DESC=Zure kantuak sortu
 
 SING_GAME_OPTIONS=Hobespenak
 SING_GAME_OPTIONS_DESC=Jokoaren hobespenak aldatu
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=Zailtasuna
 SING_OPTIONS_GAME_LANGUAGE=Hizkuntza
 SING_OPTIONS_GAME_TABS=Etiketak
 SING_OPTIONS_GAME_SORTING=Sailkapena
-SING_OPTIONS_GAME_DEBUG=Araztu
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Grafikoen hobespenak
 SING_OPTIONS_GRAPHICS_DESC=Grafikoen hobespenak
 SING_OPTIONS_GRAPHICS_RESOLUTION=Erresoluzioa
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pantaila osoa
-SING_OPTIONS_GRAPHICS_DEPTH=Kolore kalitatea
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Bistaratzeak
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Osziloskopioa
 SING_OPTIONS_GRAPHICS_LINEBONUS=Lerro Bonusa
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Bideo tamaina
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Bi jokalari modua
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Bolumena aurreikusi
 SING_OPTIONS_SOUND_PREVIEWFADING=Desagerpena aurreikusi
-
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
-;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
-;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=Letren hobespenak
 SING_OPTIONS_LYRICS_DESC=Letren hobespenak
@@ -168,35 +156,27 @@ SING_OPTIONS_RECORD_CHANNEL=Kanala
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Hobespen aurreratuak
 SING_OPTIONS_ADVANCED_DESC=Hobespen aurreratuak
-SING_OPTIONS_ADVANCED_EFFECTSING=Kantu efektuak
-SING_OPTIONS_ADVANCED_SCREENFADE=Pantaila desagertu
-SING_OPTIONS_ADVANCED_LOADANIMATION=Animazioa kargatzerakoan
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ziurtasun galderak
 SING_OPTIONS_ADVANCED_LINEBONUS=Lerro bonusa
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Aukeratu ondoren
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Talde menu auto
 
-SING_EDIT=Editorea
-SING_EDIT_MENU_DESCRIPTION=Zure kantuak sortu
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Testua inportatu MIDI fitxategiatik
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=Itzuli
-SING_EDIT_BUTTON_CONVERT=Inportatu
-SING_EDIT_BUTTON_EXIT=Itzuli
-
-SING_EDIT_NAVIGATE=Nabigatu
-SING_EDIT_SELECT=Aukeratu
-SING_EDIT_EXIT=Itzuli
-
 SING_LEGEND_SELECT=Hautatu
 SING_LEGEND_NAVIGATE=Nabigatu
 SING_LEGEND_CONTINUE=Jarraitu
 SING_LEGEND_ESC=Itzuli
 
-SING_PLAYER_DESC=Jokalarien izenak sartu
-SING_PLAYER_WHEREAMI=Jokalarien izenak
-SING_PLAYER_ENTER_NAME=Izenak idatzi
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=Zailtasuna aukeratu
 SING_DIFFICULTY_WHEREAMI=Zailtasuna
@@ -211,10 +191,15 @@ SING_SONG_SELECTION_GOTO=... joan
 SING_SONG_SELECTION=Abestia aukeratu
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Zerrenda
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Abestiak
 PLAYLIST_CATTEXT=Zerrenda: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=Guztira
 SING_MODE=Bakarka abestu
 SING_NOTES=Notak
@@ -565,36 +550,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Hurrengoa mikrofonora
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: EDIT_TITLE=Title:
-;TODO: EDIT_ARTIST=Artist:
-;TODO: EDIT_MP3=MP3:
-;TODO: EDIT_BPM=BPM:
-;TODO: EDIT_GAP=GAP:
-;TODO: EDIT_COVER=Cover:
-;TODO: EDIT_BACKGROUND=Background:
-
-;TODO: EDIT_START=Start:
-;TODO: EDIT_DURATION=Duration:
-;TODO: EDIT_TONE=Tone:
-;TODO: EDIT_LYRIC=Lyric:
-;TODO: EDIT_VIDEOGAP=Video Gap:
-;TODO: EDIT_VOLUME_AUDIO=Audio Volume:
-;TODO: EDIT_VOLUME_MIDI=Midi Volume:
-;TODO: EDIT_VOLUME_CLICK=Click Volume:
-;TODO: INFO_UNDO=Undo last operation
-
-INFO_FILE_SAVED=Fitxategia gordeta
-;TODO: INFO_TIME_FIXED=Timings corrected
-;TODO: INFO_CAPITALIZE=Capitalization corrected
-;TODO: INFO_EXIT=Do you want leave editor without save ?
-;TODO: INFO_SONG_RELOADED=Song reloaded
-;TODO: INFO_DIVIDED_BPM=BPM Divided
-;TODO: INFO_MULTIPLIED_BPM=BPM Multiplied
-;TODO: INFO_PLAY_SONG=Play song
-;TODO: INFO_PLAY_SENTENCE=Play sentence
-;TODO: INFO_CURRENT_LINE=Line:
-;TODO: INFO_CURRENT_NOTE=Note:
-
 ;TODO: INFO_MIDI_CHANNEL_OFF= Channel %0:s off!
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
@@ -638,6 +593,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Efektua
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
+;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
@@ -710,7 +666,7 @@ OPTION_VALUE_TO_SING=Abestu
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kolorea
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
@@ -742,9 +698,18 @@ OPTION_VALUE_ALL=Guztia
 ;TODO: OPTION_VALUE_PLAYER=Player
 
 ;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe
+;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe
+;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN_WHEREAMI=About...
 ;TODO: ABOUT_USDX_CREDITS=Credits
-;TODO: ABOUT_OVERVIEW=UltraStar Deluxe is a free OpenSource karaoke game for your PC. The gameplay experience is similar to that of the commercial product SingStar™ by Sony Computer Entertainment, which is exclusively available for the Playstation®. Unlike SingStar™, however, UltraStar Deluxe allows users to create their own songs and sing them on their PC.\nBy publishing the sourcecode, we’ve enabled you to customize the game completly to your heart’s content, desires and particular needs.\nEspecially you are allowed to modify the product as you wish.\n\nCreate your own themes or download content from the community, such as plugins, free songs or code patches for extended features.\nIn party mode it allows up to twelve players to sing along to your favorite music in order to score points, depending on the pitch of the voice and the rhythm of singing.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contribuited to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
