--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Fèin-obrachail
 OPTION_VALUE_SEC=Diog
 OPTION_VALUE_SECS=diog(an)
 
-OPTION_VALUE_PLAIN=Lom
-OPTION_VALUE_OLINE1=Oir-loidhne 1
-OPTION_VALUE_OLINE2=Oir-loidhne 2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=Simplidh
 OPTION_VALUE_ZOOM=Sùm
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=Seinn
 OPTION_VALUE_SELECT_PLAYERS=Tagh cluicheadairean
 OPTION_VALUE_OPEN_MENU=Fosgail an clàr-taice
 
-OPTION_VALUE_SYSTEM_CURSOR=Air [cùrsair an t-siostaim]
-OPTION_VALUE_GAME_CURSOR=Air [cùrsair a’ gheama]
-OPTION_VALUE_HARDWARE_CURSOR=Cùrsair bathair-chruaidh
-OPTION_VALUE_SOFTWARE_CURSOR=Cùrsair bathair-bhog
-
 SING_LOADING=’Ga luchdadh…
 
 SING_CHOOSE_MODE=Tagh am modh
@@ -86,9 +81,6 @@ SING_TOOLS=Innealan
 
 SING_STATS=Stadastaireachd
 SING_STATS_DESC=Seall an stadastaireachd
-
-SING_EDITOR=Deasaiche
-SING_EDITOR_DESC=Cruthaich òran agad fhèin
 
 SING_GAME_OPTIONS=Roghainnean a’ gheama
 SING_GAME_OPTIONS_DESC=Atharraich roghainnean a’ gheama
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=Duilgheadas
 SING_OPTIONS_GAME_LANGUAGE=Cànan
 SING_OPTIONS_GAME_TABS=Tabaichean
 SING_OPTIONS_GAME_SORTING=Seòrsachadh
-SING_OPTIONS_GAME_DEBUG=Dì-bhugachadh
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Roghainnean na grafaigeachd
 SING_OPTIONS_GRAPHICS_DESC=Roghainnean na grafaigeachd
 SING_OPTIONS_GRAPHICS_RESOLUTION=Dùmhlachd-bhreacaidh
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Làn-sgrìn
-SING_OPTIONS_GRAPHICS_DEPTH=Doimhne
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Fir chlis
-;TODO: SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_GRAPHICS_LINEBONUS=Duais loidhne
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Meud an fhilm
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Modh dà-chluicheadair
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Meudachadh a’ chiùil
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Ro-sheall an àirde
 SING_OPTIONS_SOUND_PREVIEWFADING=Ro-sheall an crìonadh
-
-SING_OPTIONS_INPUT_WHEREAMI=Roghainnean an ion-chuir
-SING_OPTIONS_INPUT_DESC=Roghainnean an ion-chuir
-SING_OPTIONS_INPUT_MOUSE=Luchag
-SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Uidheaman-smachd
 
 SING_OPTIONS_LYRICS_WHEREAMI=Roghainnean nam faclan
 SING_OPTIONS_LYRICS_DESC=Roghainnean nam faclan
@@ -168,35 +156,28 @@ SING_OPTIONS_RECORD_CHANNEL=Seanail
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Roghainnean adhartach
 SING_OPTIONS_ADVANCED_DESC=Roghainnean adhartach
-SING_OPTIONS_ADVANCED_EFFECTSING=Èifeachdan seinne
-SING_OPTIONS_ADVANCED_SCREENFADE=Crìonadh na sgrìn
-SING_OPTIONS_ADVANCED_LOADANIMATION=Luchdaich beòthachadh
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ceistean dìonaidh
 SING_OPTIONS_ADVANCED_LINEBONUS=Duais loidhne
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Às dèidh òrain tagh
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Fèin-chlàr-cèilidh
 
-SING_EDIT=Deasaiche
-SING_EDIT_MENU_DESCRIPTION=Cruthaich òran agad fhèin
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Ion-phortaich teacsa o fhaidhle MIDI
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=Air ais
-SING_EDIT_BUTTON_CONVERT=Ion-phortaich
-SING_EDIT_BUTTON_EXIT=Air ais
-
-SING_EDIT_NAVIGATE=Seòl
-SING_EDIT_SELECT=Tagh
-SING_EDIT_EXIT=Air ais
 
 SING_LEGEND_SELECT=Tagh
 SING_LEGEND_NAVIGATE=Seòl
 SING_LEGEND_CONTINUE=Air adhart
 SING_LEGEND_ESC=Air ais
 
-SING_PLAYER_DESC=Cuir a-steach ainmean nan cluicheadairean
-SING_PLAYER_WHEREAMI=Ainmean nan cluicheadairean
-SING_PLAYER_ENTER_NAME=Cuir a-steach ainm
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=Tagh an duilgheadas
 SING_DIFFICULTY_WHEREAMI=Duilgheadas
@@ -211,10 +192,15 @@ SING_SONG_SELECTION_GOTO=Rach gu …
 SING_SONG_SELECTION=Taghadh an òrain
 SING_SONG_SELECTION_MENU=Clàr-taice
 SING_SONG_SELECTION_PLAYLIST=Liosta-chluich
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Òrain
 PLAYLIST_CATTEXT=Liosta-chluich: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-SING_TIME=ÙINE
 SING_TOTAL=Iomlan
 SING_MODE=Seinn ’nad aonar
 SING_NOTES=Pongan
@@ -565,36 +551,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Na h-ath-chluicheadairean dhan mhicreofon
 PARTY_MODE_TOURNAMENT_WIN_DESC=Toradh na cuairte
 PARTY_MODE_TOURNAMENT_CHAMPION=Bhuannaich %0:s!
 
-EDIT_TITLE=Tiotal:
-EDIT_ARTIST=Neach-ciùil:
-EDIT_MP3=MP3:
-EDIT_BPM=BPM:
-EDIT_GAP=Beàrn:
-EDIT_COVER=Còmhdachadh:
-EDIT_BACKGROUND=Cùlaibh:
-
-EDIT_START=Toiseach:
-EDIT_DURATION=Faide:
-EDIT_TONE=Pong:
-EDIT_LYRIC=Faclan:
-EDIT_VIDEOGAP=Beàrn a' video:
-EDIT_VOLUME_AUDIO=Àirde na fuaime:
-EDIT_VOLUME_MIDI=Àirde MIDI:
-EDIT_VOLUME_CLICK=Àirde a’ chliog:
-INFO_UNDO=Neo-dhèan an gnìomh mu dheireadh
-
-INFO_FILE_SAVED=Chaidh am faidhle a shàbhaladh
-INFO_TIME_FIXED=Chaidh na tìmeachaidhean a cheartachadh
-INFO_CAPITALIZE=Chaidh na faclan mòra is beaga a cheartachadh
-INFO_EXIT=A bheil thu airson an deasaiche fhàgail gun a bhith ’ga shàbhaladh?
-INFO_SONG_RELOADED=Chaidh an t-òran ath-luchdadh
-INFO_DIVIDED_BPM=BPM roinnte
-INFO_MULTIPLIED_BPM=BPM iomadaichte
-INFO_PLAY_SONG=Cluich an t-òran
-INFO_PLAY_SENTENCE=Cluich an seantans
-INFO_CURRENT_LINE=Loidhne:
-INFO_CURRENT_NOTE=An aire:
-
 INFO_MIDI_CHANNEL_OFF= Seanail %0:s dheth!
 INFO_MIDI_CHANNEL_RESET=Tha gach seanail air!
 
@@ -742,9 +698,18 @@ OPTION_VALUE_ALL=Na h-uile
 OPTION_VALUE_PLAYER=Cluicheadair
 
 SING_ABOUT=Mu dhèidhinn
-SING_ABOUT_DESC=Mu Ultrastar Deluxe
+SING_ABOUT_DESC=Mu Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Mu dhèidhinn…
-ABOUT_MAIN_DESC=Ultrastar Deluxe
+ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=Mu dhèidhinn…
 ABOUT_USDX_CREDITS=Urram
-ABOUT_OVERVIEW=’S e geama karaoke saor is OpenSource airson PC a th’ ann an UltraStar Deluxe. Tha cluiche a’ gheama coltach ris a’ bhathar choimeirsealta SingStar™ le Sony Computer Entertainment nach fhaighear ach air Playstation®. Co-dhiù, leigidh UltraStar Deluxe leis an luchd-cleachdaidh na h-òrain aca fhèin a chruthachadh agus a’ seinn air a’ PC aca, rud nach gabh dèanamh le SingStar™.\nOn a dh’fhoillsich sinn am bun-tùs, ’s urrainn dhut an geama a ghnàthachadh gu tur a-rèir do mhiann, d’ ùidhean is nam feumalachdan agad.\nGu sònraichte, faodaidh tu am bathar atharrachadh mar a thogras tu.\n\nCruthaich na h-ùrlaran agad fhèin no luchdaich a-nuas susbaint on choimhearsnachd, can plugain, òrain shaora no bloighean còd airson gleusan leudaichte.\nSa mhodh chèilidh, ’s urrainn do suas ri dusan cluicheadair na h-òrain as fhearr leibh a sheinn còmhla feuch cò gheibh barrachd puingean na càch, a-rèir gleus a’ ghutha agus ruitheam na seinne.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contribuited to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
