--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -733,6 +733,10 @@ ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=Acerca de...
 ABOUT_USDX_CREDITS=Créditos originales
 ABOUT_USDX_DEVELOPEDBY=Desarrollado por
+ABOUT_CHECK_CHECKING=Buscando actualizaciones...
+ABOUT_CHECK_AVAILABLE=Hay disponible una nueva versión
+ABOUT_CHECK_UPTODATE=WorldParty está actualizado
+ABOUT_CHECK_CONNECTION=No hay conexión a Internet
 ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Desarrollado por
