--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=Śpiew
 OPTION_VALUE_SELECT_PLAYERS=Wybierz graczy
 OPTION_VALUE_OPEN_MENU=Otwórz Menu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Sprzętowy Kursor
-OPTION_VALUE_SOFTWARE_CURSOR=Programowy Kursor
-
 SING_LOADING=Wczytywanie...
 
 SING_CHOOSE_MODE=Wybierz tryb
@@ -86,9 +81,6 @@ SING_TOOLS=Narzędzia
 
 SING_STATS=Statystyki
 SING_STATS_DESC=Zobacz statystyki
-
-SING_EDITOR=Edytor
-SING_EDITOR_DESC=Stwórz własną piosenkę
 
 SING_GAME_OPTIONS=Opcje gry
 SING_GAME_OPTIONS_DESC=Zmiana ustawień gry
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=Trudność
 SING_OPTIONS_GAME_LANGUAGE=Język
 SING_OPTIONS_GAME_TABS=Zakładki
 SING_OPTIONS_GAME_SORTING=Sortowanie
-SING_OPTIONS_GAME_DEBUG=Debug
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opcje Grafiki
 SING_OPTIONS_GRAPHICS_DESC=Ustawienia grafiki
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rozdzielczość
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pełny ekran
-SING_OPTIONS_GRAPHICS_DEPTH=Głębia
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Wizualizacja
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Oscyloskop
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linia bonusu
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Rozmiar filmu
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Tryb dwóch graczy
 SING_OPTIONS_SOUND_MUSICAUTOGAIN=Przyrost muzyki
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Głośność w podglądzie
 SING_OPTIONS_SOUND_PREVIEWFADING=Zanikanie w podglądzie
-
-SING_OPTIONS_INPUT_WHEREAMI=Opcje wejść
-SING_OPTIONS_INPUT_DESC=Ustawienia wejść
-SING_OPTIONS_INPUT_MOUSE=Mysz
-SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Wsparcie kontrolera
 
 SING_OPTIONS_LYRICS_WHEREAMI=Opcje tekstu
 SING_OPTIONS_LYRICS_DESC=Ustawienie tekstu
@@ -168,35 +156,27 @@ SING_OPTIONS_RECORD_CHANNEL=Kanał
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Opcje zaawansowane
 SING_OPTIONS_ADVANCED_DESC=Zaawansowane ustawienia
-SING_OPTIONS_ADVANCED_EFFECTSING=Efekty śpiewania
-SING_OPTIONS_ADVANCED_SCREENFADE=Przenikanie ekranów
-SING_OPTIONS_ADVANCED_LOADANIMATION=Animacja wczytywania
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Pytania pomocnicze
 SING_OPTIONS_ADVANCED_LINEBONUS=Linia bonusu
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Po wybraniu piosenki
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 
-SING_EDIT=Edytor
-SING_EDIT_MENU_DESCRIPTION=Stwórz własną piosenkę
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Zaimportuj tekst z pliku midi
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=Wstecz
-SING_EDIT_BUTTON_CONVERT=Import
-SING_EDIT_BUTTON_EXIT=Wstecz
-
-SING_EDIT_NAVIGATE=Nawiguj
-SING_EDIT_SELECT=Wybierz
-SING_EDIT_EXIT=Wstecz
-
 SING_LEGEND_SELECT=Wybierz
 SING_LEGEND_NAVIGATE=Nawiguj
 SING_LEGEND_CONTINUE=Kontynuacja
 SING_LEGEND_ESC=Wstecz
 
-SING_PLAYER_DESC=Wpisz nazwę gracza/y
-SING_PLAYER_WHEREAMI=Nazwa graczy
-SING_PLAYER_ENTER_NAME=Wpisz nazwę
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=Wybierz trudność
 SING_DIFFICULTY_WHEREAMI=Trudność
@@ -211,10 +191,15 @@ SING_SONG_SELECTION_GOTO=Idź do ..
 SING_SONG_SELECTION=Wybór piosenki
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlista
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Piosenki
 PLAYLIST_CATTEXT=Playlista: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=Cały
 SING_MODE=Śpiewaj solo
 SING_NOTES=Nuty
@@ -565,36 +550,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Następni gracze do mikrofonów
 PARTY_MODE_TOURNAMENT_WIN_DESC=Wynik rundy
 PARTY_MODE_TOURNAMENT_CHAMPION=Mistrzem zostaje: %0:s!
 
-EDIT_TITLE=Tytuł:
-EDIT_ARTIST=Artysta:
-;TODO: EDIT_MP3=MP3:
-;TODO: EDIT_BPM=BPM:
-;TODO: EDIT_GAP=GAP:
-EDIT_COVER=Okładka:
-EDIT_BACKGROUND=Tło:
-
-;TODO: EDIT_START=Start:
-EDIT_DURATION=Czas trwania:
-EDIT_TONE=Ton:
-EDIT_LYRIC=Text:
-;TODO: EDIT_VIDEOGAP=Video Gap:
-EDIT_VOLUME_AUDIO=Głośność audio:
-EDIT_VOLUME_MIDI=Głośność midi:
-EDIT_VOLUME_CLICK=Kliknij głośność:
-INFO_UNDO=Cofnij ostatnią operację
-
-INFO_FILE_SAVED=Plik zapisany
-INFO_TIME_FIXED=Czasy poprawione
-INFO_CAPITALIZE=Wielkość liter poprawiona
-INFO_EXIT=Czy chcesz opuścić edytor bez zapisu?
-INFO_SONG_RELOADED=Piosenka przeładowana
-INFO_DIVIDED_BPM=BPM podzielone
-INFO_MULTIPLIED_BPM=BPM pomnożone
-INFO_PLAY_SONG=Graj piosenkę
-INFO_PLAY_SENTENCE=Graj zdanie
-INFO_CURRENT_LINE=Linia:
-INFO_CURRENT_NOTE=Nuta:
-
 INFO_MIDI_CHANNEL_OFF= Kanał %0:s wyłączony!
 INFO_MIDI_CHANNEL_RESET= Wszystkie kanały włączone!
 
@@ -638,6 +593,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Efekt
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Jasność
 SING_OPTIONS_WEBCAM_SATURATION=Nasycenie
 SING_OPTIONS_WEBCAM_HUE=Odcień
+;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Włącz podgląd
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Wyłącz podgląd
 
@@ -710,7 +666,7 @@ JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Długość
 JUKEBOX_SONGOPTIONS_LYRIC=Opcje tekstu
 JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Rozmiar
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozycja
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kolor
 JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linia
 JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Właściwość
@@ -742,9 +698,17 @@ OPTION_VALUE_ALL=Wszystko
 OPTION_VALUE_PLAYER=Gracz
 
 SING_ABOUT=Informacje
-SING_ABOUT_DESC=Informacje o Ultrastar Deluxe
+SING_ABOUT_DESC=Informacje o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Informacje...
-ABOUT_MAIN_DESC=Ultrastar Deluxe
+ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=Informacje...
 ;TODO: ABOUT_USDX_CREDITS=Credits
-ABOUT_OVERVIEW=UltraStar Deluxe jest darmową, OpenSource-ową grą karaoke dla Twojego komputera. Rozgrywka przypomina tą z komercyjnego produktu SingStar™ firmy Sony Computer Entertainment, która jest dostępna jedynie na konsolę Playstation®. Jednakże, w przeciwieństwie do SingStar™, UltraStar Deluxe pozwala graczom na tworzenie własnych utworów i rozgrywkę na komputerach PC.\nPublikując kod źródłowy, pozwalamy na modyfikację gry wedla własnego uznania, chęci i potrzeb.\nW szczególności, możesz modyfikować produkt tak jak tego chcesz.\n\nTwórz własne style lub pobieraj treści zgromadzone przez społeczność gry, takie jak pluginy, darmowe utwory lub łatki zawierające dodatkowe funkcjonalności.\nTryb imprezy pozwala aż dwunastu graczom śpiewać razem do ulubionej muzyki w celu zdobycia punktów, w zależności od wysokości tonu głosu i rytmiki śpiewu.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
