--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Automatikus
 OPTION_VALUE_SEC=Másodperc
 OPTION_VALUE_SECS=Másodperc
 
-OPTION_VALUE_PLAIN=Egyszerű
-OPTION_VALUE_OLINE1=OLine1
-OPTION_VALUE_OLINE2=OLine2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=Sima
 OPTION_VALUE_ZOOM=Zoom
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=dalválasztás
 OPTION_VALUE_SELECT_PLAYERS=játékos választás
 OPTION_VALUE_OPEN_MENU=Menü megnyitása
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Hardver Kurzor
-OPTION_VALUE_SOFTWARE_CURSOR=Softver Kurzor
-
 SING_LOADING=Betöltés...
 
 SING_CHOOSE_MODE=válassz menüpontot
@@ -86,9 +81,6 @@ SING_TOOLS=eszközök
 
 SING_STATS=statisztika
 SING_STATS_DESC=nézd meg a statisztikát
-
-SING_EDITOR=szerkesztő
-SING_EDITOR_DESC=készíts saját zenét
 
 SING_GAME_OPTIONS=játék beállításai
 SING_GAME_OPTIONS_DESC=változtasd meg a beállításokat
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=nehézség
 SING_OPTIONS_GAME_LANGUAGE=nyelv
 SING_OPTIONS_GAME_TABS=elválasztók
 SING_OPTIONS_GAME_SORTING=rendezés
-SING_OPTIONS_GAME_DEBUG=hibakezelő mód
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=grafikai beállítások
 SING_OPTIONS_GRAPHICS_DESC=grafika beállítása
 SING_OPTIONS_GRAPHICS_RESOLUTION=felbontás
 SING_OPTIONS_GRAPHICS_FULLSCREEN=teljes képernyő
-SING_OPTIONS_GRAPHICS_DEPTH=színmélység
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualization
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=oszcilloszkóp
 SING_OPTIONS_GRAPHICS_LINEBONUS=sáv bónusz
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=videó mérete
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=két játékos mód
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=előzetes hang
 SING_OPTIONS_SOUND_PREVIEWFADING=előz. hang késése
-
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
-;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
-;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=szöveg beállítások
 SING_OPTIONS_LYRICS_DESC=szöveg beállítása
@@ -168,35 +156,27 @@ SING_OPTIONS_RECORD_CHANNEL=csatorna:
 
 SING_OPTIONS_ADVANCED_WHEREAMI=haladó beállítások
 SING_OPTIONS_ADVANCED_DESC=további beállítások
-SING_OPTIONS_ADVANCED_EFFECTSING=hang effektek
-SING_OPTIONS_ADVANCED_SCREENFADE=háttér áttűnése
-SING_OPTIONS_ADVANCED_LOADANIMATION=betöltési animáció
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=megerősítést kér
 SING_OPTIONS_ADVANCED_LINEBONUS=sáv bónusz
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=éneklés után
 SING_OPTIONS_ADVANCED_PARTYPOPUP=partymenü megj.
 
-SING_EDIT=szerkesztő
-SING_EDIT_MENU_DESCRIPTION=készíts saját zenét
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Importálj szöveget midiből
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=vissza
-SING_EDIT_BUTTON_CONVERT=Importálás
-SING_EDIT_BUTTON_EXIT=Vissza
-
-SING_EDIT_NAVIGATE=Navigálás
-SING_EDIT_SELECT=Választás
-SING_EDIT_EXIT=Vissza
-
 SING_LEGEND_SELECT=Választás
 SING_LEGEND_NAVIGATE=Navigálás
 SING_LEGEND_CONTINUE=Folytatás
 SING_LEGEND_ESC=Vissza
 
-SING_PLAYER_DESC=Kérem a játékos(ok) nevét
-SING_PLAYER_WHEREAMI=Játékos Neve
-SING_PLAYER_ENTER_NAME=Név
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=Nehézségi szint választása
 SING_DIFFICULTY_WHEREAMI=Nehézség
@@ -211,10 +191,15 @@ SING_SONG_SELECTION_GOTO=Szám keresés
 SING_SONG_SELECTION=Szám választása
 SING_SONG_SELECTION_MENU=Menü
 SING_SONG_SELECTION_PLAYLIST=számlista
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Számok
 PLAYLIST_CATTEXT=Számlista: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=Összesen
 SING_MODE=Egyszeri játékos
 SING_NOTES=Hang
@@ -565,36 +550,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=következő játékosok a mikrofonhoz
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: EDIT_TITLE=Title:
-;TODO: EDIT_ARTIST=Artist:
-;TODO: EDIT_MP3=MP3:
-;TODO: EDIT_BPM=BPM:
-;TODO: EDIT_GAP=GAP:
-;TODO: EDIT_COVER=Cover:
-;TODO: EDIT_BACKGROUND=Background:
-
-;TODO: EDIT_START=Start:
-;TODO: EDIT_DURATION=Duration:
-;TODO: EDIT_TONE=Tone:
-;TODO: EDIT_LYRIC=Lyric:
-;TODO: EDIT_VIDEOGAP=Video Gap:
-;TODO: EDIT_VOLUME_AUDIO=Audio Volume:
-;TODO: EDIT_VOLUME_MIDI=Midi Volume:
-;TODO: EDIT_VOLUME_CLICK=Click Volume:
-;TODO: INFO_UNDO=Undo last operation
-
-INFO_FILE_SAVED=Fájl mentve
-;TODO: INFO_TIME_FIXED=Timings corrected
-;TODO: INFO_CAPITALIZE=Capitalization corrected
-;TODO: INFO_EXIT=Do you want leave editor without save ?
-;TODO: INFO_SONG_RELOADED=Song reloaded
-;TODO: INFO_DIVIDED_BPM=BPM Divided
-;TODO: INFO_MULTIPLIED_BPM=BPM Multiplied
-;TODO: INFO_PLAY_SONG=Play song
-;TODO: INFO_PLAY_SENTENCE=Play sentence
-;TODO: INFO_CURRENT_LINE=Line:
-;TODO: INFO_CURRENT_NOTE=Note:
-
 ;TODO: INFO_MIDI_CHANNEL_OFF= Channel %0:s off!
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
@@ -742,9 +697,17 @@ OPTION_VALUE_ALL=Összes
 ;TODO: OPTION_VALUE_PLAYER=Player
 
 ;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe
+;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe
+;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN_WHEREAMI=About...
 ;TODO: ABOUT_USDX_CREDITS=Credits
-;TODO: ABOUT_OVERVIEW=UltraStar Deluxe is a free OpenSource karaoke game for your PC. The gameplay experience is similar to that of the commercial product SingStar™ by Sony Computer Entertainment, which is exclusively available for the Playstation®. Unlike SingStar™, however, UltraStar Deluxe allows users to create their own songs and sing them on their PC.\nBy publishing the sourcecode, we’ve enabled you to customize the game completly to your heart’s content, desires and particular needs.\nEspecially you are allowed to modify the product as you wish.\n\nCreate your own themes or download content from the community, such as plugins, free songs or code patches for extended features.\nIn party mode it allows up to twelve players to sing along to your favorite music in order to score points, depending on the pitch of the voice and the rhythm of singing.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
