--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_PLAYLIST=Spillelist
 ;TODO: OPTION_VALUE_SEC=Second
 ;TODO: OPTION_VALUE_SECS=Seconds
 
-;TODO: OPTION_VALUE_PLAIN=Plain
-;TODO: OPTION_VALUE_OLINE1=OLine1
-;TODO: OPTION_VALUE_OLINE2=OLine2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 ;TODO: OPTION_VALUE_SIMPLE=Simple
 ;TODO: OPTION_VALUE_ZOOM=Zoom
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=syng
 ;TODO: OPTION_VALUE_SELECT_PLAYERS=Select Players
 ;TODO: OPTION_VALUE_OPEN_MENU=Open Menu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-;TODO: OPTION_VALUE_HARDWARE_CURSOR=Hardware Cursor
-;TODO: OPTION_VALUE_SOFTWARE_CURSOR=Software Cursor
-
 SING_LOADING=Laster...
 
 SING_CHOOSE_MODE=velg modus
@@ -86,9 +81,6 @@ SING_TOOLS=verktøy
 
 SING_STATS=statistikk
 SING_STATS_DESC=vis statistikk
-
-SING_EDITOR=editor
-SING_EDITOR_DESC=lag dine egne sanger
 
 SING_GAME_OPTIONS=spillinnstillinger
 SING_GAME_OPTIONS_DESC=endre spillinstillinger
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=Vanskelighet
 SING_OPTIONS_GAME_LANGUAGE=Språk
 SING_OPTIONS_GAME_TABS=Mappeinndeling
 SING_OPTIONS_GAME_SORTING=Sortering
-SING_OPTIONS_GAME_DEBUG=Feilsøking
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Innstillinger Grafikk
 SING_OPTIONS_GRAPHICS_DESC=Grafiske innstillinger
 SING_OPTIONS_GRAPHICS_RESOLUTION=Oppløsning
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Fullskjerm
-SING_OPTIONS_GRAPHICS_DEPTH=Fargedybde
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 ;TODO: SING_OPTIONS_GRAPHICS_VISUALIZER=Visualization
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Oscilloskop
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linjebonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Filmstørrelse
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Tospiller-modus
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Preview-volum
 SING_OPTIONS_SOUND_PREVIEWFADING=Preview-fading
-
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
-;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
-;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=Innstillinger Tekst
 SING_OPTIONS_LYRICS_DESC=tekstinnstillinger
@@ -168,35 +156,28 @@ SING_OPTIONS_RECORD_CHANNEL=Kanal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Innstillinger Avansert
 SING_OPTIONS_ADVANCED_DESC=avanserte innstillinger
-SING_OPTIONS_ADVANCED_EFFECTSING=Sangeffekter
-SING_OPTIONS_ADVANCED_SCREENFADE=Skjermfading
-SING_OPTIONS_ADVANCED_LOADANIMATION=Animasjonslasting
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sikkerhetsspørsmål
 SING_OPTIONS_ADVANCED_LINEBONUS=Linjebonus
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Etter sang:
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto partymeny
 
-SING_EDIT=editor
-SING_EDIT_MENU_DESCRIPTION=lag dine egne sanger
-
-;TODO: SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Import text from midi file
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=tilbake
-;TODO: SING_EDIT_BUTTON_CONVERT=Import
-SING_EDIT_BUTTON_EXIT=tilbake
-
-SING_EDIT_NAVIGATE=naviger
-SING_EDIT_SELECT=velg
-SING_EDIT_EXIT=tilbake
 
 SING_LEGEND_SELECT=velg
 SING_LEGEND_NAVIGATE=naviger
 SING_LEGEND_CONTINUE=fortsett
 SING_LEGEND_ESC=tilbake
 
-SING_PLAYER_DESC=velg spillernavn
-SING_PLAYER_WHEREAMI=Spillernavn
-SING_PLAYER_ENTER_NAME=velg navn
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=velg vanskelighetsgrad
 SING_DIFFICULTY_WHEREAMI=Vanskelighet
@@ -211,10 +192,15 @@ SING_SONG_SELECTION_GOTO=gå til ..
 SING_SONG_SELECTION=Sangvalg
 SING_SONG_SELECTION_MENU=meny
 SING_SONG_SELECTION_PLAYLIST=spilleliste
+;TODO: SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Sanger
 PLAYLIST_CATTEXT=Spilleliste: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=total
 SING_MODE=syng solo
 SING_NOTES=toner
@@ -565,36 +551,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=neste spillere til mikrofonene
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: EDIT_TITLE=Title:
-;TODO: EDIT_ARTIST=Artist:
-;TODO: EDIT_MP3=MP3:
-;TODO: EDIT_BPM=BPM:
-;TODO: EDIT_GAP=GAP:
-;TODO: EDIT_COVER=Cover:
-;TODO: EDIT_BACKGROUND=Background:
-
-;TODO: EDIT_START=Start:
-;TODO: EDIT_DURATION=Duration:
-;TODO: EDIT_TONE=Tone:
-;TODO: EDIT_LYRIC=Lyric:
-;TODO: EDIT_VIDEOGAP=Video Gap:
-;TODO: EDIT_VOLUME_AUDIO=Audio Volume:
-;TODO: EDIT_VOLUME_MIDI=Midi Volume:
-;TODO: EDIT_VOLUME_CLICK=Click Volume:
-;TODO: INFO_UNDO=Undo last operation
-
-;TODO: INFO_FILE_SAVED=File saved
-;TODO: INFO_TIME_FIXED=Timings corrected
-;TODO: INFO_CAPITALIZE=Capitalization corrected
-;TODO: INFO_EXIT=Do you want leave editor without save ?
-;TODO: INFO_SONG_RELOADED=Song reloaded
-;TODO: INFO_DIVIDED_BPM=BPM Divided
-;TODO: INFO_MULTIPLIED_BPM=BPM Multiplied
-;TODO: INFO_PLAY_SONG=Play song
-;TODO: INFO_PLAY_SENTENCE=Play sentence
-;TODO: INFO_CURRENT_LINE=Line:
-;TODO: INFO_CURRENT_NOTE=Note:
-
 ;TODO: INFO_MIDI_CHANNEL_OFF= Channel %0:s off!
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
@@ -638,6 +594,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Effekter
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
+;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
@@ -742,9 +699,18 @@ OPTION_VALUE_ALL=Alt
 ;TODO: OPTION_VALUE_PLAYER=Player
 
 ;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe
+;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe
+;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN_WHEREAMI=About...
 ;TODO: ABOUT_USDX_CREDITS=Credits
-;TODO: ABOUT_OVERVIEW=UltraStar Deluxe is a free OpenSource karaoke game for your PC. The gameplay experience is similar to that of the commercial product SingStar™ by Sony Computer Entertainment, which is exclusively available for the Playstation®. Unlike SingStar™, however, UltraStar Deluxe allows users to create their own songs and sing them on their PC.\nBy publishing the sourcecode, we’ve enabled you to customize the game completly to your heart’s content, desires and particular needs.\nEspecially you are allowed to modify the product as you wish.\n\nCreate your own themes or download content from the community, such as plugins, free songs or code patches for extended features.\nIn party mode it allows up to twelve players to sing along to your favorite music in order to score points, depending on the pitch of the voice and the rhythm of singing.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
