--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Segundo
 OPTION_VALUE_SECS=Segundos
 
-OPTION_VALUE_PLAIN=Plano
-OPTION_VALUE_OLINE1=Negrito 1
-OPTION_VALUE_OLINE2=Negrito 2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=Simples
 OPTION_VALUE_ZOOM=Zoom
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=Cantar
 OPTION_VALUE_SELECT_PLAYERS=Escolher Jogadores
 OPTION_VALUE_OPEN_MENU=Abrir Menu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Hardware Cursor
-OPTION_VALUE_SOFTWARE_CURSOR=Software Cursor
-
 SING_LOADING=A Ler...
 
 SING_CHOOSE_MODE=Escolha o Modo
@@ -86,9 +81,6 @@ SING_TOOLS=Ferramentas
 
 SING_STATS=Estatísticas
 SING_STATS_DESC=Ver Estatísticas
-
-SING_EDITOR=Editor
-SING_EDITOR_DESC=Criar canção
 
 SING_GAME_OPTIONS=Opções de Jogo
 SING_GAME_OPTIONS_DESC=Alterar configurações de Jogo
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=Dificuldade
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_TABS=Subpastas
 SING_OPTIONS_GAME_SORTING=Ordenação
-SING_OPTIONS_GAME_DEBUG=Modo Debug
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opções de Gráficos
 SING_OPTIONS_GRAPHICS_DESC=Configurações dos Gráficos
 SING_OPTIONS_GRAPHICS_RESOLUTION=Resolução
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Ecrã Total
-SING_OPTIONS_GRAPHICS_DEPTH=Profundidade
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualizador
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Osciloscópio
 SING_OPTIONS_GRAPHICS_LINEBONUS=Linha Bonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamanho do Vídeo
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Modo de dois jogadores
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Preview Volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Preview Fading
-
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
-;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
-;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=Opções de Letras
 SING_OPTIONS_LYRICS_DESC=Configuração de Letras
@@ -168,35 +156,27 @@ SING_OPTIONS_RECORD_CHANNEL=Canal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Opções Avançadas
 SING_OPTIONS_ADVANCED_DESC=Outras Opções
-SING_OPTIONS_ADVANCED_EFFECTSING=Efeitos
-SING_OPTIONS_ADVANCED_SCREENFADE=Fade do Ecrã
-SING_OPTIONS_ADVANCED_LOADANIMATION=Animação
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Segurança
 SING_OPTIONS_ADVANCED_LINEBONUS=Linha de Bônus
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Escolha da Canção
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu de Festa
 
-SING_EDIT=Editor
-SING_EDIT_MENU_DESCRIPTION=Cria a tua própria canção
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=Importar texto de um arquivo MIDI
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=Voltar
-SING_EDIT_BUTTON_CONVERT=Importar
-SING_EDIT_BUTTON_EXIT=Voltar
-
-SING_EDIT_NAVIGATE=Navegar
-SING_EDIT_SELECT=Seleccionar
-SING_EDIT_EXIT=Voltar
-
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Continuar
 SING_LEGEND_ESC=Voltar
 
-SING_PLAYER_DESC=Introduza o(s) nome(s) do(s) jogador(es)
-SING_PLAYER_WHEREAMI=Nome dos Jogadores
-SING_PLAYER_ENTER_NAME=Introduzir Nome
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=Nível de Dificuldade
 SING_DIFFICULTY_WHEREAMI=Dificuldade
@@ -211,10 +191,15 @@ SING_SONG_SELECTION_GOTO=Ir para ..
 SING_SONG_SELECTION=Seleção da Canção
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlist
+SING_SONG_IN_CAT=Cançao
 SING_SONGS_IN_CAT=Canções
 PLAYLIST_CATTEXT=Playlist: %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=Total
 SING_MODE=Cantar Solo
 SING_NOTES=Notas
@@ -565,36 +550,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Jogadores seguintes para os microfones
 PARTY_MODE_TOURNAMENT_WIN_DESC=Resultado da ronda
 PARTY_MODE_TOURNAMENT_CHAMPION=O campeão é: %0:s!
 
-EDIT_TITLE=Título:
-EDIT_ARTIST=Artista:
-EDIT_MP3=MP3:
-EDIT_BPM=BPM:
-EDIT_GAP=GAP:
-EDIT_COVER=Cover:
-EDIT_BACKGROUND=Background:
-
-EDIT_START=Inicio:
-EDIT_DURATION=Duração:
-EDIT_TONE=Tom:
-EDIT_LYRIC=Letra:
-EDIT_VIDEOGAP=Video Gap:
-EDIT_VOLUME_AUDIO=Audio Volume:
-EDIT_VOLUME_MIDI=Midi Volume:
-EDIT_VOLUME_CLICK=Click Volume:
-INFO_UNDO=Reverter operação
-
-INFO_FILE_SAVED=Ficheiro Guardado
-INFO_TIME_FIXED=Tempos corrigidos
-INFO_CAPITALIZE=Capitalização corrigida
-INFO_EXIT=Deseja sair do editor sem guardar?
-INFO_SONG_RELOADED=Música Reaberta
-INFO_DIVIDED_BPM=Dividir BPM
-INFO_MULTIPLIED_BPM=Multiplicar BPM
-INFO_PLAY_SONG=Play Música
-INFO_PLAY_SENTENCE=Play Frase
-INFO_CURRENT_LINE=Linha:
-INFO_CURRENT_NOTE=Nota:
-
 INFO_MIDI_CHANNEL_OFF= Canal %0:s desactivado!
 INFO_MIDI_CHANNEL_RESET= Todos os canais activos!
 
@@ -638,6 +593,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Efeito
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Brilho
 SING_OPTIONS_WEBCAM_SATURATION=Saturação
 SING_OPTIONS_WEBCAM_HUE=Matiz
+;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Activar Pré-Visualização
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Desactivar Pré-Visualização
 
@@ -742,9 +698,17 @@ OPTION_VALUE_ALL=Todas
 OPTION_VALUE_PLAYER=Jogador
 
 SING_ABOUT=Sobre
-SING_ABOUT_DESC=Sobre o Ultrastar WorldParty
+SING_ABOUT_DESC=Sobre o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Sobre...
 ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=Sobre...
 ABOUT_USDX_CREDITS=Créditos
-ABOUT_OVERVIEW=WorldParty é um MOD da versão original Ultrastar Deluxe 1.1 desenvolvido pela equipa do Ultrastar España.\n\nPrincipais novidades desta versão:\n\n - Novos temas/skins\n - Novos menus de canções\n - Avatares\n - Novas Opções Jukebox \n - E muitas outras coisas...\n\nAgradecimentos:\n\n zup3r_vock, daniel20, jaher06 e a toda a equipa do Ultrastar España por todo o seu esforço e dedicação neste projecto.\n\nEste programa é gratuito e livre sobre a licença GPL.\n\nhttp://ultrastar-es.org
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
